--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "jquery.scrollTo": "~1.4.12",
     "bootstrap": "~3.2.0",
     "ionicons": "~1.5.2",
-    "jquery.ui": "~1.11.0"
+    "jquery.ui": "~1.11.0",
+    "angular-scroll": "~0.6.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
