Add projects datas + style + finitions

--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,7 @@
   "smarttabs": true,
   "jquery":true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "multiline": false
   }
 }
