--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "bootstrap": "~3.2.0",
     "ionicons": "~1.5.2",
     "jquery.ui": "~1.11.0",
-    "angular-scroll": "~0.6.1"
+    "angular-scroll": "~0.6.1",
+    "multiline": "~0.3.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
