--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "mobiledetect/mobiledetectlib": "dev-master"
+    },
+    "config": {
+        "vendor-dir": "app/vendor"
     }
 }
