--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "ionicons": "~1.5.2",
     "jquery.ui": "~1.11.0",
     "angular-scroll": "~0.6.1",
-    "multiline": "~0.3.4"
+    "multiline": "~0.3.4",
+    "angular-translate": "~2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
