--- a/package.json
+++ b/package.json
@@ -1,42 +1,51 @@
 {
-  "name": "antoinesavignacfr",
-  "version": "1.1.0",
-  "dependencies": {},
-  "devDependencies": {
-    "connect-php": "0.0.1",
-    "gateway": "^0.2.1",
-    "grunt": "^0.4.1",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.8.3",
-    "grunt-newer": "^0.7.0",
-    "grunt-ngmin": "^0.0.3",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.3.0",
-    "grunt-wiredep": "^1.7.0",
-    "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.17",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
+  "name": "antoineSavignacPortfolio",
+  "version": "2.0.0",
+  "author": "Antoine Savignac <antoine.savignac@gmail.com>",
+  "homepage": "http://antoinesavignac.fr",
   "scripts": {
-    "test": "grunt test"
+    "clean": "rimraf node_modules doc typings && npm cache clean",
+    "clean-install": "npm run clean && npm install",
+    "clean-start": "npm run clean && npm start",
+    "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
+    "build": "webpack --progress --profile --colors --display-error-details --display-cached",
+    "build:prod": "webpack --progress --profile --colors --display-error-details --display-cached --optimize-occurence-order --optimize-minimize --optimize-dedupe",
+    "server": "webpack-dev-server --inline --progress --profile --colors --display-error-details --display-cached --port 9000",
+    "webdriver-update": "webdriver-manager update",
+    "webdriver-start": "webdriver-manager start",
+    "lint": "tsconfig-lint",
+    "start": "npm run server",
+    "postinstall": "typings install"
+  },
+  "dependencies": {
+    "angular2": "2.0.0-beta.0",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "es7-reflect-metadata": "^1.2.0",
+    "ng2-translate": "^1.2.3",
+    "rxjs": "5.0.0-beta.0",
+    "zone.js": "0.5.10"
+  },
+  "devDependencies": {
+    "reflect-metadata": "0.1.2",
+    "css-loader": "^0.23.0",
+    "exports-loader": "0.6.2",
+    "expose-loader": "^0.7.1",
+    "file-loader": "^0.8.4",
+    "imports-loader": "^0.6.4",
+    "json-loader": "^0.5.3",
+    "raw-loader": "0.5.1",
+    "rimraf": "^2.4.4",
+    "style-loader": "^0.13.0",
+    "ts-loader": "^0.7.2",
+    "tsconfig-lint": "^0.2.0",
+    "tslint": "^3.2.0",
+    "tslint-loader": "^2.1.0",
+    "typedoc": "^0.3.12",
+    "typescript": "^1.7.3",
+    "typings": "^0.3.1",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.12.1"
   }
 }
