--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "es7-reflect-metadata": "^1.2.0",
+    "jquery": "^2.1.4",
     "ng2-translate": "^1.2.3",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
