--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zone.js": "0.5.10"
   },
   "devDependencies": {
+    "autoprefixer": "^6.2.1",
     "css-loader": "^0.23.0",
     "exports-loader": "0.6.2",
     "expose-loader": "^0.7.1",
@@ -35,6 +36,8 @@
     "imports-loader": "^0.6.4",
     "json-loader": "^0.5.3",
     "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
+    "precss": "^1.3.0",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.2",
     "rimraf": "^2.4.4",
