--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.0",
+    "bootstrap": "^3.3.6",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "es7-reflect-metadata": "^1.2.0",
+    "ionicons": "^2.0.1",
     "jquery": "^2.1.4",
     "ng2-translate": "^1.2.3",
     "rxjs": "5.0.0-beta.0",
