Fix technos, add jquery scrollTo and fix nav.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "sourceMap": true
   },
   "files": [
-    "typings/main.d.ts",
-    "src/bootstrap.ts",
-    "src/vendor.ts"
+    "./typings/main.d.ts",
+    "./src/bootstrap.ts",
+    "./src/vendor.ts"
   ],
   "filesGlob": [
     "./src/**/*.ts",
@@ -20,6 +20,6 @@
   "compileOnSave": false,
   "buildOnSave": false,
   "atom": {
-    "rewriteTsconfig": true
+    "rewriteTsconfig": false
   }
 }
