--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
     "build": "webpack --progress --profile --colors --display-error-details --display-cached",
     "build:prod": "webpack --progress --profile --colors --display-error-details --display-cached --optimize-occurence-order --optimize-minimize --optimize-dedupe",
-    "server": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --port 9000",
+    "server": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --port 3000",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tsconfig-lint",
@@ -25,6 +25,7 @@
     "es7-reflect-metadata": "^1.2.0",
     "ionicons": "^2.0.1",
     "jquery": "^2.1.4",
+    "jquery.scrollto": "^2.1.2",
     "ng2-translate": "^1.2.3",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
