--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rimraf": "^2.4.4",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "ts-helper": "0.0.1",
     "ts-loader": "^0.7.2",
     "tsconfig-lint": "^0.2.0",
     "tslint": "^3.2.0",
