--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ngx-translate/core": "^6.0.0",
     "@types/jquery": "^1.10.31",
     "@types/jquery.scrollto": "^1.4.27",
     "bootstrap-sass": "^3.3.7",
@@ -31,29 +32,28 @@
     "jquery": "^3.1.0",
     "jquery-ui": "^1.12.1",
     "jquery.scrollto": "^2.1.2",
-    "ng2-translate": "^2.5.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.1",
     "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "^2.5.43",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.13",
-    "serve": "^2.1.2",
-    "ts-node": "1.2.1",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "^5.1.1",
+    "serve": "^4.0.1",
+    "ts-node": "^2.1.0",
     "tslint": "^4.0.2",
-    "typescript": "~2.0.3",
+    "typescript": "^2.2.1",
     "yaml-loader": "^0.4.0"
   }
 }
