--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "build": "ng build",
-    "build:prod": "npm run build -- --target=production",
+    "build:prod": "npm run build -- --prod",
     "serve:prod": "serve dist/"
   },
   "private": true,
