--- a/preact/package.json
+++ b/preact/package.json
@@ -5,53 +5,54 @@
   "homepage": "http://antoinesavignac.fr",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm-run-all --parallel verify:js:watch dev",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --progress",
-    "build": "rimraf build/ && cross-env NODE_ENV=production webpack --progress",
-    "serve": "serve -C -p 3000 build/",
-    "verify:js": "eslint \"src/**/*.js\" && echo ✅ verify:js success",
-    "verify:js:watch": "chokidar 'src/**/*.js' -c 'npm run verify:js' --initial --silent"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "license": "UNLICENSED",
   "devDependencies": {
+    "@originjs/vite-plugin-content": "1.0.1",
+    "@preact/preset-vite": "2.5.0",
+    "@svgr/webpack": "6.5.1",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.0.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "chokidar-cli": "1.2.0",
-    "copy-webpack-plugin": "4.0.1",
+    "copy-webpack-plugin": "11.0.0",
     "cross-env": "5.0.1",
-    "css-loader": "0.28.4",
+    "css-loader": "6.7.3",
     "eslint": "4.0.0",
     "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "2.1.2",
-    "file-loader": "0.11.2",
-    "html-webpack-plugin": "2.28.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
     "json-loader": "0.5.4",
-    "node-sass": "4.5.3",
+    "mini-css-extract-plugin": "2.7.2",
     "npm-run-all": "^4.0.2",
-    "postcss-loader": "2.0.6",
-    "raw-loader": "0.5.1",
+    "postcss-loader": "7.0.2",
+    "raw-loader": "4.0.2",
+    "resolve-url-loader": "5.0.0",
     "rimraf": "2.6.1",
-    "sass-loader": "6.0.6",
+    "sass": "1.57.1",
+    "sass-loader": "13.2.0",
     "serve": "5.2.2",
-    "source-map-loader": "0.2.1",
-    "style-loader": "0.18.2",
-    "url-loader": "0.5.9",
-    "webpack": "3.0.0",
-    "webpack-dev-server": "2.4.5",
-    "webpack-merge": "4.1.0",
-    "yaml-loader": "0.4.0"
+    "source-map-loader": "4.0.1",
+    "style-loader": "3.3.1",
+    "url-loader": "4.1.1",
+    "vite": "4.0.4",
+    "vite-plugin-static-copy": "0.13.0",
+    "webpack": "5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "4.11.1",
+    "webpack-merge": "5.8.0",
+    "yaml-loader": "0.8.0"
   },
   "dependencies": {
     "bootstrap-sass": "3.3.7",
     "ionicons": "3.0.0",
-    "jquery": "3.2.1",
-    "jquery-ui": "1.12.1",
-    "jquery.scrollto": "2.1.2",
-    "preact": "8.1.0",
-    "preact-compat": "3.16.0"
+    "jquery.scrollto": "2.1.3",
+    "preact": "10.11.3",
+    "preact-compat": "3.19.0"
   }
 }
